@@ -36,7 +36,9 @@ import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.pmiops.workbench.FakeClockConfiguration;
+import org.pmiops.workbench.cloudtasks.TaskQueueService;
 import org.pmiops.workbench.config.WorkbenchConfig;
+import org.pmiops.workbench.config.WorkbenchLocationConfigService;
 import org.pmiops.workbench.db.dao.AccessTierDao;
 import org.pmiops.workbench.db.dao.CdrVersionDao;
 import org.pmiops.workbench.db.dao.UserDao;
@@ -47,6 +49,7 @@ import org.pmiops.workbench.db.model.DbWorkspace;
 import org.pmiops.workbench.exceptions.ServerErrorException;
 import org.pmiops.workbench.firecloud.FireCloudService;
 import org.pmiops.workbench.initialcredits.InitialCreditsService;
+import org.pmiops.workbench.legacy_leonardo_client.ApiException;
 import org.pmiops.workbench.legacy_leonardo_client.model.LeonardoAuditInfo;
 import org.pmiops.workbench.legacy_leonardo_client.model.LeonardoCloudContext;
 import org.pmiops.workbench.legacy_leonardo_client.model.LeonardoCloudProvider;
@@ -75,7 +78,7 @@ import org.springframework.context.annotation.Import;
 import org.springframework.http.HttpStatus;
 
 @DataJpaTest
-public class OfflineRuntimeControllerTest {
+public class OfflineEnvironmentsControllerTest {
   private static final Instant NOW = FakeClockConfiguration.NOW.toInstant();
   private static final Duration RUNTIME_MAX_AGE = Duration.ofDays(14);
   private static final Duration RUNTIME_IDLE_MAX_AGE = Duration.ofDays(7);
@@ -85,7 +88,9 @@ public class OfflineRuntimeControllerTest {
   @Import({
     FakeClockConfiguration.class,
     LeonardoMapperImpl.class,
-    OfflineRuntimeController.class,
+    OfflineEnvironmentsController.class,
+    TaskQueueService.class,
+    WorkbenchLocationConfigService.class,
   })
   static class Configuration {
     @Bean
@@ -99,7 +104,7 @@ public class OfflineRuntimeControllerTest {
   @MockBean private LeonardoApiClient mockLeonardoApiClient;
   @MockBean private MailService mockMailService;
 
-  @Autowired private OfflineRuntimeController controller;
+  @Autowired private OfflineEnvironmentsController controller;
 
   @Autowired private AccessTierDao accessTierDao;
   @Autowired private CdrVersionDao cdrVersionDao;
@@ -172,9 +177,7 @@ public class OfflineRuntimeControllerTest {
 
   private List<LeonardoListRuntimeResponse> toListRuntimeResponseList(
       List<LeonardoGetRuntimeResponse> runtimes) {
-    return runtimes.stream()
-        .map(leonardoMapper::toListRuntimeResponse)
-        .collect(Collectors.toList());
+    return runtimes.stream().map(leonardoMapper::toListRuntimeResponse).toList();
   }
 
   private void stubRuntimes(List<LeonardoGetRuntimeResponse> runtimes) {
@@ -231,69 +234,69 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testDeleteOldRuntimesNoResults() throws Exception {
+  public void testDeleteOldRuntimesNoResults() {
     stubRuntimes(Collections.emptyList());
     assertThat(controller.deleteOldRuntimes().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
-    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any());
+    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any(), anyBoolean());
   }
 
   @Test
-  public void testDeleteOldRuntimesActiveRuntime() throws Exception {
+  public void testDeleteOldRuntimesActiveRuntime() {
     stubRuntimes(List.of(runtimeWithAge(Duration.ofHours(10))));
     assertThat(controller.deleteOldRuntimes().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
-    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any());
+    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any(), anyBoolean());
   }
 
   @Test
-  public void testDeleteOldRuntimesActiveTooOld() throws Exception {
+  public void testDeleteOldRuntimesActiveTooOld() {
     stubRuntimes(List.of(runtimeWithAge(RUNTIME_MAX_AGE.plusMinutes(5))));
     assertThat(controller.deleteOldRuntimes().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
-    verify(mockLeonardoApiClient).deleteRuntimeAsService(any(), any());
+    verify(mockLeonardoApiClient).deleteRuntimeAsService(any(), any(), anyBoolean());
   }
 
   @Test
-  public void testDeleteOldRuntimesIdleYoung() throws Exception {
+  public void testDeleteOldRuntimesIdleYoung() {
     // Running for under the IDLE_MAX_AGE, idle for 10 hours
     stubRuntimes(
         List.of(
             runtimeWithAgeAndIdle(RUNTIME_IDLE_MAX_AGE.minusMinutes(10), Duration.ofHours(10))));
     assertThat(controller.deleteOldRuntimes().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
-    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any());
+    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any(), anyBoolean());
   }
 
   @Test
-  public void testDeleteOldRuntimesIdleOld() throws Exception {
+  public void testDeleteOldRuntimesIdleOld() {
     // Running for >IDLE_MAX_AGE, idle for 10 hours
     stubRuntimes(
         List.of(runtimeWithAgeAndIdle(RUNTIME_IDLE_MAX_AGE.plusMinutes(15), Duration.ofHours(10))));
     assertThat(controller.deleteOldRuntimes().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
-    verify(mockLeonardoApiClient).deleteRuntimeAsService(any(), any());
+    verify(mockLeonardoApiClient).deleteRuntimeAsService(any(), any(), anyBoolean());
   }
 
   @Test
-  public void testDeleteOldRuntimesBrieflyIdleOld() throws Exception {
+  public void testDeleteOldRuntimesBrieflyIdleOld() {
     // Running for >IDLE_MAX_AGE, idle for only 15 minutes
     stubRuntimes(
         List.of(
             runtimeWithAgeAndIdle(RUNTIME_IDLE_MAX_AGE.plusMinutes(15), Duration.ofMinutes(15))));
     assertThat(controller.deleteOldRuntimes().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
-    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any());
+    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any(), anyBoolean());
   }
 
   @Test
-  public void testDeleteOldRuntimesOtherStatusFiltered() throws Exception {
+  public void testDeleteOldRuntimesOtherStatusFiltered() {
     stubRuntimes(
         List.of(
             runtimeWithAge(RUNTIME_MAX_AGE.plusDays(10)).status(LeonardoRuntimeStatus.DELETING)));
     assertThat(controller.deleteOldRuntimes().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
 
-    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any());
+    verify(mockLeonardoApiClient, never()).deleteRuntimeAsService(any(), any(), anyBoolean());
   }
 
   @Test
@@ -327,7 +330,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testCheckPersistentDisksInitialThresholdNotification() throws Exception {
+  public void testCheckPersistentDisksInitialThresholdNotification() throws MessagingException {
     stubWorkspaceOwners(workspace, List.of(user1));
     stubDisks(List.of(idleDisk(Duration.ofDays(14L))));
     assertThat(controller.checkPersistentDisks().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
@@ -338,7 +341,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testCheckPersistentDisksPeriodicThresholdNotification() throws Exception {
+  public void testCheckPersistentDisksPeriodicThresholdNotification() throws MessagingException {
     stubWorkspaceOwners(workspace, List.of(user1));
     stubDisks(
         List.of(
@@ -353,7 +356,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testCheckPersistentDisksMultipleOwners() throws Exception {
+  public void testCheckPersistentDisksMultipleOwners() throws MessagingException {
     stubWorkspaceOwners(workspace, List.of(user1, user2));
     stubDisks(List.of(idleDisk(Duration.ofDays(30L))));
     assertThat(controller.checkPersistentDisks().getStatusCode()).isEqualTo(HttpStatus.NO_CONTENT);
@@ -364,7 +367,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testCheckPersistentDisksSkipsUnknownUser() throws Exception {
+  public void testCheckPersistentDisksSkipsUnknownUser() throws MessagingException {
     stubWorkspaceOwners(workspace, List.of(user1));
 
     ListPersistentDiskResponse mysteryDisk = idleDisk(Duration.ofDays(14L));
@@ -380,7 +383,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testCheckPersistentDisksContinuesOnMailFailure() throws Exception {
+  public void testCheckPersistentDisksContinuesOnMailFailure() throws MessagingException {
     stubWorkspaceOwners(workspace, List.of(user1));
     stubDisks(
         List.of(
@@ -402,7 +405,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testCheckPersistentDisksFreeTier() throws Exception {
+  public void testCheckPersistentDisksFreeTier() throws MessagingException {
     stubWorkspaceOwners(workspace, List.of(user1));
     stubDisks(List.of(idleDisk(Duration.ofDays(14L))));
 
@@ -418,7 +421,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_Gce_attached() throws Exception {
+  public void testIsDiskAttached_Gce_attached() throws ApiException {
     int diskId = 1;
     ListPersistentDiskResponse diskResponse = new ListPersistentDiskResponse().id(diskId);
     LeonardoGceWithPdConfigInResponse runtimeConfigResponse =
@@ -434,7 +437,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_Gce_multiple() throws Exception {
+  public void testIsDiskAttached_Gce_multiple() throws ApiException {
     int diskId = 1;
     int otherDiskId = 2;
     ListPersistentDiskResponse diskResponse = new ListPersistentDiskResponse().id(diskId);
@@ -459,7 +462,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_Gce_mismatch() throws Exception {
+  public void testIsDiskAttached_Gce_mismatch() throws ApiException {
     int diskId = 1;
     int otherDiskId = 2;
     ListPersistentDiskResponse diskResponse = new ListPersistentDiskResponse().id(diskId);
@@ -477,7 +480,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_Gce_no_runtimes() throws Exception {
+  public void testIsDiskAttached_Gce_no_runtimes() throws ApiException {
     int diskId = 1;
     ListPersistentDiskResponse diskResponse = new ListPersistentDiskResponse().id(diskId);
 
@@ -488,7 +491,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_GKE_App_attached() throws Exception {
+  public void testIsDiskAttached_GKE_App_attached() throws ApiException {
     String diskName = "my-disk-name";
     ListPersistentDiskResponse diskResponse =
         new ListPersistentDiskResponse()
@@ -502,7 +505,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_GKE_App_multiple() throws Exception {
+  public void testIsDiskAttached_GKE_App_multiple() throws ApiException {
     String diskName = "my-disk-name";
     String otherDiskName = "other-disk-name";
     ListPersistentDiskResponse diskResponse =
@@ -520,7 +523,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_GKE_App_mismatch() throws Exception {
+  public void testIsDiskAttached_GKE_App_mismatch() throws ApiException {
     String diskName = "my-disk-name";
     String otherDiskName = "other-disk-name";
     ListPersistentDiskResponse diskResponse =
@@ -535,7 +538,7 @@ public class OfflineRuntimeControllerTest {
   }
 
   @Test
-  public void testIsDiskAttached_GKE_App_no_apps() throws Exception {
+  public void testIsDiskAttached_GKE_App_no_apps() throws ApiException {
     String diskName = "my-disk-name";
     ListPersistentDiskResponse diskResponse =
         new ListPersistentDiskResponse()
